--- a/web/index.html
+++ b/web/index.html
@@ -9,10 +9,10 @@
     />
     <title>Overview Board</title>
     <!-- fonts -->
-    <meta
+    <!-- <meta
       http-equiv="Content-Security-Policy"
       content="style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com;"
-    />
+    /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- Poppins -->
